--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap');
 
+body {
+    height: 100vh;
+}
+
 
 main {
     display: flex;
@@ -16,25 +20,52 @@ main {
 .actualiser,
 .playervs,
 .rules,
-.rejouer {
+.rejouer,
+.count-red,
+.count-yellow {
     font-size: 40px;
     color: #fff;
     font-family: 'Protest Revolution', sans-serif;
     letter-spacing: 2px;
     word-spacing: 5px;
     margin: 150px 0 50px;
+    cursor: pointer;
+}
+
+.rules-menu {
+    font-family: 'Protest Revolution', sans-serif;
 }
 
 .rejouer {
     font-size: 40px;
-    background-color: #8f64fd;
-    color: #fff;
+    background-color: white;
+    color: black;
     letter-spacing: 5px;
     padding: 15px;
     border-radius: 25px;
-    margin-top: 50px;
+    border: 2px solid black;
+    border-bottom: 6px solid black;
+    margin-top: 0;
     cursor: pointer;
     z-index: 10;
+    height: 100px;
+    width: 300px;
+    font-size: large;
+    text-align: center;
+}
+
+.rejouer-button {
+    border-radius: 50px;
+    font-size: medium;
+    background-color: #5C2DD5;
+    border: 2px solid black;
+    border-bottom: 6px solid black;
+    color: black;
+    text-align: center;
+    width: 150px; 
+    height: 20px;
+    margin-left: 70px;
+    padding-top: 5px;
 }
 
 .contenaire {
@@ -45,7 +76,7 @@ main {
 }
 
 .box {
-    background-color: blue;
+    background-color: rgb(68, 74, 148);
     width: 70px;
     height: 70px;
     display: flex;
@@ -63,15 +94,15 @@ main {
 
 @keyframes box-red {
     0% {
-        background-color: red;
+        background-color: rgb(253,102,135);
         transform: translateY(-20px);
     }
     50% {
-        background-color: red;
+        background-color: rgb(253,102,135);
         transform: translateY(0);
     }
     100% {
-        background-color: red;
+        background-color: rgb(253,102,135);
         transform: translateY(20px);
     }
 }
@@ -86,25 +117,21 @@ main {
 
 @keyframes box-yellow {
     0% {
-        background-color: yellow;
+        background-color: rgb(255,206,103);
         transform: translateY(-20px);
     }
     50% {
-        background-color: yellow;
+        background-color: rgb(255,206,103);
         transform: translateY(0);
     }
     100% {
-        background-color: yellow;
+        background-color: rgb(255,206,103);
         transform: translateY(20px);
     }
 }
 
 
-.colonne:hover {
-    .box {
-        background-color: rgba(0, 0, 255, 0.7);
-    }
-}
+
 
 .rond {
     border: 1px blue solid;
@@ -122,10 +149,10 @@ main {
 
 @keyframes win-red {
     50% {
-        background-color: rgba(255, 0, 0, 0.7);
+        background-color: rgba(253, 102, 135, 0.7);
     }
     100% {
-        background-color: red;
+        background-color: rgb(253,102,135);
     }
 }
 
@@ -137,19 +164,23 @@ main {
 
 @keyframes win-yellow {
     50% {
-        background-color: rgba(255, 255, 0, 0.6);
+        background-color: rgba(255, 206, 103, 0.6)
     }
     100% {
-        background-color: yellow;
+        background-color: rgb(255,206,103);
     }
 }
 
 .yellow {
-    background-color: yellow;
+    background-color: rgb(255,206,103);
 }
 
 .red {
-    background-color: red;
+    background-color: rgb(253,102,135);
+}
+
+.purple {
+    background-color: #5C2DD5;
 }
 
 .wrapper-fleche {
@@ -182,6 +213,13 @@ main {
     background-color: #FD6687;
 }
 
+.wrapper-game {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .hidden {
     display: none;
 }
@@ -193,43 +231,44 @@ main {
 /*Partie css*/
 main {
     background-color: #7945FF;
-    z-index: -2;
+    z-index: 1;
 }
 
 .bottom-layer {
-    z-index: 0;
-    background-color: #5C2DD5;
-    position: absolute;
-    bottom: 0;
+    z-index: 2;
     border-top-left-radius: 100px;
     border-top-right-radius: 100px;
     height: 300px;
-    width: 100%;
+    width: 101vw;
+    position: absolute;
+    bottom: 0;
 }
 
 .playervs,
 .rules {
     width: 300px;
     height: 40px;
-    border: 2px solid black;
-    border-bottom: 6px solid black;
+    border: 3px solid black;
+    border-bottom: 9px solid black;
     color: black;
     margin: 0;
     border-radius: 10px;
     transition: 0.5s;
-    text-align: center;
     font-size: 20px;
     padding-top: 10px;
+    padding-left: 5px;
 }
 
 .playervs:hover,
 .rules:hover {
-    border: 2px solid #7945FF;
-    border-bottom: 6px solid #7945FF;
+    border: 2px solid #5C2DD5;
+    border-bottom: 6px solid #5C2DD5;
 }
 
 .playervs {
     background-color: #FFCE67;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .rules {
@@ -242,9 +281,89 @@ main {
 
 .count-red,
 .count-yellow {
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
     background-color: white;
+    color: black;
+    border-radius: 10px;
     position: absolute;
-    
+    letter-spacing: normal;
+    font-size: large;
+    text-align: center;
+    border: 2px solid black;
+    border-bottom: 6px solid black;
+}
+
+.count-red p,
+.count-yellow p {
+    margin-top: 30px;
+    font-size: 40px;
+}
+
+.count-red {
+    left: 300px;
+    top: 200px;
+}
+
+.count-yellow {
+    right: 300px;
+    top: 200px;
+}
+
+
+
+.fa-regular,
+.fa-face-smile {
+    background-color: transparent;   
+}
+
+
+.emoji-two {
+    position: absolute;
+    height: 20px;
+}
+
+.main-menu-wrapper {
+    background-color: #8f64fd;
+    border: 2px solid black;
+    border-bottom: 6px solid black;
+    width: 400px;
+    height: 350px;
+    margin-top: 30vh;
+    border-radius: 20px;
+}
+
+.button-wrapper {
+    margin-left: 50px;
+    margin-right: auto;
+}
+
+.logo {
+    width: 100%;
+    height: 70px;
+    margin-top: 60px;
+}
+
+.rules-menu {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    border-bottom: 6px solid black;
+    border-radius: 20px;
+    height: 600px;
+    width: 1100px;
+    margin-top: 100px;
+}
+
+.rules-menu h1 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.rules-menu p {
+    margin-left: 40px;
+    margin-right: 40px;
+    font-size: 20px;
+    margin-right: auto;
 }
