--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ main {
 }
 
 .box {
-    background-color: rgb(68, 74, 148);
+    background-color: white;
     width: 70px;
     height: 70px;
     display: flex;
@@ -134,11 +134,10 @@ main {
 
 
 .rond {
-    border: 1px blue solid;
     border-radius: 50%;
     width: 50px;
     height: 50px; 
-    background-color: white;
+    background-color: #5C2DD5;
 }
 
 .rond-win-red {
@@ -269,6 +268,13 @@ main {
     background-color: #FFCE67;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.rulesButton {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-left: 400px;
 }
 
 .rules {
