--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap');
-
 body {
     height: 100vh;
 }
-
-
 main {
     display: flex;
     align-items: center;
     height: 100vh;
     flex-direction: column;
 }
-
 .tower-red,
 .tower-yellow,
 .red-win,
@@ -22,7 +18,8 @@ main {
 .rules,
 .rejouer,
 .count-red,
-.count-yellow {
+.count-yellow,
+.timer {
     font-size: 40px;
     color: #fff;
     font-family: 'Protest Revolution', sans-serif;
@@ -31,15 +28,9 @@ main {
     margin: 150px 0 50px;
     cursor: pointer;
 }
-
-.colonne:hover .box {
-    background-color: rgb(53, 53, 173);
-}
-
 .rules-menu {
     font-family: 'Protest Revolution', sans-serif;
 }
-
 .rejouer,
 .timer {
     font-size: 40px;
@@ -58,7 +49,6 @@ main {
     font-size: large;
     text-align: center;
 }
-
 .rejouer-button {
     border-radius: 50px;
     font-size: medium;
@@ -67,38 +57,25 @@ main {
     border-bottom: 6px solid black;
     color: black;
     text-align: center;
-    width: 150px; 
+    width: 150px;
     height: 20px;
     margin-left: 70px;
     padding-top: 5px;
 }
-
-.timer {
-    font-size: 30px;
-    background-color: #FFCE67;
-    cursor: auto;
-}
-
-.timer p {
-    margin: 0 0 20px;
-}
-
 .contenaire {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     z-index: 10;
 }
-
 .box {
-    background-color: white;
+    background-color: rgb(68, 74, 148);
     width: 70px;
     height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .box-animation-red {
     animation-name: box-red;
     animation-duration: .07s;
@@ -106,7 +83,6 @@ main {
     height: 52px;
     border-radius: 50%;
 }
-
 @keyframes box-red {
     0% {
         background-color: rgb(253,102,135);
@@ -121,7 +97,6 @@ main {
         transform: translateY(20px);
     }
 }
-
 .box-animation-yellow {
     animation-name: box-yellow;
     animation-duration: .07s;
@@ -129,7 +104,6 @@ main {
     height: 52px;
     border-radius: 50%;
 }
-
 @keyframes box-yellow {
     0% {
         background-color: rgb(255,206,103);
@@ -144,23 +118,18 @@ main {
         transform: translateY(20px);
     }
 }
-
-
-
-
 .rond {
+    border: 1px blue solid;
     border-radius: 50%;
     width: 50px;
-    height: 50px; 
-    background-color: #5C2DD5;
+    height: 50px;
+    background-color: white;
 }
-
 .rond-win-red {
     animation-name: win-red;
     animation-duration: .5s;
     animation-iteration-count: infinite;
 }
-
 @keyframes win-red {
     50% {
         background-color: rgba(253, 102, 135, 0.7);
@@ -169,13 +138,11 @@ main {
         background-color: rgb(253,102,135);
     }
 }
-
 .rond-win-yellow {
     animation-name: win-yellow;
     animation-duration: .5s;
     animation-iteration-count: infinite;
 }
-
 @keyframes win-yellow {
     50% {
         background-color: rgba(255, 206, 103, 0.6)
@@ -184,19 +151,15 @@ main {
         background-color: rgb(255,206,103);
     }
 }
-
-.yellow {
-    background-color: rgb(255,206,103);
-}
-
-.red {
-    background-color: rgb(253,102,135);
-}
-
 .purple {
     background-color: #5C2DD5;
 }
-
+.yellow {
+    background-color: #FFCE67;
+}
+.red {
+    background-color: #FD6687;
+}
 .wrapper-fleche {
     display: flex;
     justify-content: space-around;
@@ -205,7 +168,6 @@ main {
     height: 10px;
     margin-top: 20px;
 }
-
 .retour,
 .actualiser {
     text-align: center;
@@ -213,7 +175,7 @@ main {
     height: 30px;
     border-radius: 50px;
     font-size: 15px;
-    background-color: #8f64fd;
+    background-color: #8F64FD;
     margin-top: 10px;
     margin-left: 5px;
     padding-top: 10px;
@@ -221,30 +183,23 @@ main {
     cursor: pointer;
     transition: 0.5s;
 }
-
 .retour:hover,
 .actualiser:hover {
     background-color: #FD6687;
 }
-
 .wrapper-game {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-
 .hidden {
     display: none;
 }
-
-
-/*Partie css*/
 main {
     background-color: #7945FF;
     z-index: 1;
 }
-
 .bottom-layer {
     z-index: 2;
     border-top-left-radius: 100px;
@@ -254,7 +209,6 @@ main {
     position: absolute;
     bottom: 0;
 }
-
 .playervs,
 .rules {
     width: 300px;
@@ -269,34 +223,22 @@ main {
     padding-top: 10px;
     padding-left: 5px;
 }
-
 .playervs:hover,
 .rules:hover {
     border: 2px solid #5C2DD5;
     border-bottom: 6px solid #5C2DD5;
 }
-
 .playervs {
     background-color: #FFCE67;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
-.rulesButton {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin-left: 400px;
-}
-
 .rules {
     background-color:#FFFFFF;
 }
-
 .clear {
     clear: both;
 }
-
 .count-red,
 .count-yellow {
     width: 150px;
@@ -311,38 +253,29 @@ main {
     border: 2px solid black;
     border-bottom: 6px solid black;
 }
-
 .count-red p,
 .count-yellow p {
     margin-top: 30px;
     font-size: 40px;
 }
-
 .count-red {
     left: 300px;
     top: 200px;
 }
-
 .count-yellow {
     right: 300px;
     top: 200px;
 }
-
-
-
 .fa-regular,
 .fa-face-smile {
-    background-color: transparent;   
+    background-color: transparent;
 }
-
-
 .emoji-two {
     position: absolute;
     height: 20px;
 }
-
 .main-menu-wrapper {
-    background-color: #8f64fd;
+    background-color: #8F64FD;
     border: 2px solid black;
     border-bottom: 6px solid black;
     width: 400px;
@@ -350,18 +283,15 @@ main {
     margin-top: 30vh;
     border-radius: 20px;
 }
-
 .button-wrapper {
     margin-left: 50px;
     margin-right: auto;
 }
-
 .logo {
     width: 100%;
     height: 70px;
     margin-top: 60px;
 }
-
 .rules-menu {
     background-color: white;
     color: black;
@@ -372,32 +302,14 @@ main {
     width: 1100px;
     margin-top: 100px;
 }
-
 .rules-menu h1 {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 10px;
 }
-
 .rules-menu p {
     margin-left: 40px;
     margin-right: 40px;
     font-size: 20px;
     margin-right: auto;
-}
-
-.colonne[data-columns="0"] .box[data-rows="0"] {
-    border-radius: 20px 0 0 0;
-}
-
-.colonne[data-columns="6"] .box[data-rows="0"] {
-    border-radius: 0 20px 0 0;
-}
-
-.colonne[data-columns="6"] .box[data-rows="5"] {
-    border-radius: 0 0 20px 0;
-}
-
-.colonne[data-columns="0"] .box[data-rows="5"] {
-    border-radius: 0 0 0 20px;
 }
